--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 
     <body>
         <h1>This is a Header</h1>
-        <p>This is pharagraph</p>
-
-        <p>This is modified</p>
-
+        <p>This is first</p>
+        <p>This is second</p>
+        <p>This is third</p>
     </body>
 </html>
